--- a/login.html
+++ b/login.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/index.html">Ir a pagina principal</a>
+    <a href="index.html">Ir a pagina principal</a>
 </body>
 </html>
