--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Pagina Principal</title>
 </head>
-<body>
-    <h1>Pagina index</h1>
-    <a href="login.html">Ir a inicio de sesion </a>
+<body class="bg-gradient-to-r from-cyan-400 to-blue-600 min-h-screen">
+   <header class="absolute w-68 h-36 top-10 left-[28rem] text-4xl  font-bold drop-shadow-2xl">
+        <h1>PORTAFOLIO PROGRAMACIÓN WEB</h1>
+   </header>
+   <nav class="absolute w-60 h-[38.5rem] bg-black/50 text-gray-200 backdrop-blur-lg shadow-2xl rounded-3xl top-4 left-8">
+    <span class="absolute p-3 left-10 text-9xl material-symbols-outlined">
+        person
+        </span>
+        <h1 class="absolute top-40 left-2 font-bold text-3xl text-center">Everardo Diaz Martinez</h1>
+        <div class="absolute w-44 h-10 bg-white text-teal-700 hover:bg-gray-200 rounded-3xl top-64 left-8">
+            <a class="absolute top-1.5 left-14" href="#">Contacto</a>
+        </div>
+   </nav>
+   <div class="absolute top-32 left-[20rem] w-2/3 h-24 font-bold cursor-pointer bg-black/50 text-gray-200 backdrop-blur-lg shadow-2xl rounded-3xl">
+        <a href="./dashboard.html" class="absolute top-6 left-6 text-3xl hover:text-orange-400  transition duration-300 delay-100">Dashboard</a>
+        
+   </div>
 </body>
 </html>
