--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
             <a class="absolute top-1.5 left-14" href="#">Contacto</a>
         </div>
    </nav>
-   <div class="absolute top-32 left-[20rem] w-2/3 h-24 font-bold cursor-pointer bg-black/50 text-gray-200 backdrop-blur-lg shadow-2xl rounded-3xl">
+   <div class="absolute top-32 left-[20rem] w-2/3 h-20 font-bold cursor-pointer bg-black/50 text-gray-200 backdrop-blur-lg shadow-2xl rounded-3xl">
         <a href="./dashboard.html" class="absolute top-6 left-6 text-3xl hover:text-orange-400  transition duration-300 delay-100">Dashboard</a>
-        
    </div>
+   <div class="absolute top-56 left-[20rem] w-2/3 h-20 font-bold cursor-pointer bg-black/50 text-gray-200 backdrop-blur-lg shadow-2xl rounded-3xl">
+        <a href="./Layout.html" class="absolute top-6 left-6 text-3xl hover:text-orange-400  transition duration-300 delay-100">Layout</a>
+    </div>
 </body>
 </html>
