--- a/login.html
+++ b/login.html
@@ -2,10 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PRACTICA ESTILOS</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <a href="index.html">Ir a pagina principal</a>
+    <main>
+        <div class="contenedor-principal" >
+            <div class="contenedor1">
+                <div class="titulo">
+                    Welcome to MDM
+                </div>
+                <hr>
+                <div class="texto">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate optio tempora sapiente nostrum dolor consequatur veritatis voluptas sit libero vero doloribus in repudiandae sunt nemo rem esse, saepe obcaecati delectus.
+                </div>
+                <button class="boton1">
+                    Know More
+                </button>
+            </div>
+            <div class="contenedor2">
+                <div class="titulo2">
+                    Signin
+                </div>  
+                <hr class="hr">
+                <div class="formulario">
+                    <form class="formu">
+                        <input type="text" placeholder="Enter Username..." class="user">
+                        <input type="password" placeholder="Enter Password..." class="contra">
+                    </form>
+                </div>
+                <button class="boton2">LOGIN</button>
+            </div>
+
+        </div>
+    </main>
+    
 </body>
 </html>
