--- a/index.html
+++ b/index.html
@@ -22,15 +22,21 @@
    </nav>
    <div class="absolute top-32 left-[20rem] w-2/3 h-20 font-bold cursor-pointer bg-black/50 text-gray-200 backdrop-blur-lg shadow-2xl rounded-3xl">
         <a href="./dashboard.html" class="absolute top-6 left-6 text-3xl hover:text-orange-400  transition duration-300 delay-100">Dashboard</a>
+        <img class="absolute w-28 h-13 right-5 top-3 rounded-3xl" src="./portada1.png" alt="">  
    </div>
    <div class="absolute top-56 left-[20rem] w-2/3 h-20 font-bold cursor-pointer bg-black/50 text-gray-200 backdrop-blur-lg shadow-2xl rounded-3xl">
         <a href="./Layout.html" class="absolute top-5 left-6 text-3xl hover:text-orange-400  transition duration-300 delay-100">Layout</a>
+        <img class="absolute w-28 h-13 right-5 top-3 rounded-3xl" src="./portada2.png" alt="">  
+
     </div>
     <div class="absolute top-[20rem] left-[20rem] w-2/3 h-20 font-bold cursor-pointer bg-black/50 text-gray-200 backdrop-blur-lg shadow-2xl rounded-3xl">
         <a href="./index_audi.html" class="absolute top-5 left-6 text-3xl hover:text-orange-400  transition duration-300 delay-100">AirPods</a>
+        <img class="absolute w-28 h-13 right-5 top-3 rounded-3xl" src="./portada3.png" alt="">
     </div>
     <div class="absolute top-[26rem] left-[20rem] w-2/3 h-20 font-bold cursor-pointer bg-black/50 text-gray-200 backdrop-blur-lg shadow-2xl rounded-3xl">
         <a href="./login.html" class="absolute top-5 left-6 text-3xl hover:text-orange-400  transition duration-300 delay-100">Login</a>
+        <img class="absolute w-28 h-13 right-5 top-3 rounded-3xl" src="./portada4.png" alt="">  
+
     </div> 
 </body>
 </html>
